feat: don't show signup link on login screen if signup disabled
